# gcm-rust

./: Cargo.toml  README.md
src/: lib.rs
src/gcmrust/channels/: base_channel.rs  erm_logistic.rs  mod.rs  normalized_pseudo_bayes_logistic.rs  pseudo_bayes_logistic.rs  ridge_regression.rs
src/gcmrust/data_models/: base_model.rs  base_partition.rs  base_prior.rs  bo_laplace.rs  gaussian.rs  gcm.rs  lasso.rs  logit.rs  matching.rs  matching_lasso.rs  mod.rs  piecewise_affine.rs  piecewise_constant.rs  probit.rs
src/gcmrust/erm/: integrals.rs  state_evolution.rs
src/gcmrust/pseudo_bayes/: integrals.rs  mod.rs  pseudo_bayes_functions.rs  state_evolution.rs
src/gcmrust/python/: evidence.rs  state_evolution.rs  state_evolution_laplace.rs  utility.rs
src/gcmrust/state_evolution/: integrals.rs  state_evolution.rs
src/gcmrust/utility/: approximation.rs  evidence.rs  kappas.rs  mod.rs
