[package]
name = "gcmrust"
version = "0.1.0"
edition = "2021"

[dependencies]
peroxide = "0.30"
statrs   = "*"
optimize = "*"
ndarray  = "*"
simplers_optimization = "*"
argmin   = "*"
clap = { version = "3.2.20", features = ["derive"] }
pyo3 = { version = "0.17.1", features = ["extension-module"] }

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "gcmpyo3"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[target.aarch64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[profile.release]
opt-level = 3
