[package]
name = "gcmrust"
version = "0.1.0"
edition = "2021"

[dependencies]
peroxide = "0.30"
statrs   = "*"
optimize = "*"
ndarray  = "*"
simplers_optimization = "*"
argmin   = "*"
clap = { version = "3.2.20", features = ["derive"] }
pyo3 = { version = "0.17.1", features = ["extension-module"] }
optimization = "*"
roots = "*"

[lib]
name = "gcmpyo3"
crate-type = ["cdylib"]

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[target.aarch64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[profile.release]
opt-level = 3
